# soedit

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
doc/: COPYING  Makefile.am  README
man/: Makefile.am  soedit.1
src/: Makefile.am  edit.c
